@@ -14,6 +14,8 @@
     * Remove Net::SSLeay::SSL_CTX#get_session_cache_mode method.
     * Remove Net::SSLeay::SSL_CTX#set_session_cache_mode method.
     * Remove Net::SSLeay::SSL_CTX#set_session_id_context method.
+    * Remove Net::SSLeay::Callback::TlsextTicketKey class.
+    
 0.026 2024-12-11
   [Incompatibe Changes]
     * Remove X509#get_ocsp_uri method.
